kubernetes/components/dragonfly/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ${APP}-dragonfly-metrics
spec:
  podSelector:
    matchLabels:
      app: ${APP}-dragonfly
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9999
          protocol: TCP
    - from:
        - podSelector: {}
      ports:
        - port: 6379
          protocol: TCP
